ajustes .env y restapis

--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,2 @@
-backend_url =your backend url
+backend_url = "https://miniature-journey-97q7ppvx7vqx2x64j-3030.app.github.dev"
 sentiment_analyzer_url=your code engine deployment url
